# xuanphi

./: .gitignore  LICENSE.md  Linux-Install-fresh.txt  README.md  phiTest.py  phi_config.ini  workingJSON.py
ATM/: dataBase.txt
ATM/src/: ATM.java  Account.java  DataBase.java  Keypad.java  LockMode.java  Main.java  Mode.java  Notification.java  UserDepositMode.java  UserMode.java  UserShowBalanceMode.java  UserWithdrawMode.java
ArduinoSnake/: CMakeLists.txt
ArduinoSnake/src/: Snake.h  (+6 more)
CPPLearn/: CMakeLists.txt  main.cpp
CppLib/: CMakeCache.txt  CMakeLists.txt  CppLib  HashTable.h  Makefile  Snake.cpp  Snake.h  SnakeLogic.h  Vector.h  cmake_install.cmake  main.cpp
RaspiLearn/: CMakeLists.txt  README.md  TestLib.h  main.cpp  pinlayout.txt  testMain
RaspiLearn/execute/: CMakeCache.txt  Makefile  cmake_install.cmake
RaspiPython/: main.py
atomJava/: BouncingBallSimple.java
javaAlgo/: ShortPalinDrome.txt
learnJS/: cgi_handle.py  chat.js  chatApp.py  chatClient.py  client.py  clientTest.py  default.html  index.html  jquery-3.0.0.min.js  main.js  server.py  snake.js  styles.css  test.html  test.py  testJS.js  testStyle.css
learnJava/: clients.ser  clients.txt
projectSonar/: README  combine.py  complot.py  config.ini  demolib.py  feature-eval.py  feature.py  generate-NUS-file.py  generate-graph.py  generate-numpy-features.py  generate-simplified-data.py  generate-training-samples.py  json2csv.py  json2graph.py  json2graph2.py  load.py  pca.py  phiTest.py  process-json.py  processJson.py  svm-train-all-features.py  svm-train.py  svmclassifier.py  utils.py
rpi/: Makefile  record-sensors.c  rpi-gpio.c  rpi-gpio.h
tensorFlowPython/: mnist_softmax.py  test.py  test2.py
v4-AIS/: Makefile  bcm2835.c  rpi-serial.sh  test-adc-bcm.c  test-adc.c  test-lin-bcm.c  test-lin.c
viewer/: basic.html  commshub.py  curb-main.css  curb-main.js  daemon.py  index.html  settings.html  ssh.py  test-sensor.py  viewer.js
(+199 files in other folders)
